Update project structure and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,45 @@
-# Virtual environments
-venv/
+# ==================================================
+# Conda / Python virtual environments (folder-based)
+# ==================================================
+.conda/
+lp_env/
 env/
+venv/
 books_venv/
 
-# Jupyter
-.ipynb_checkpoints/
-
-# Python cache
+# ==================================================
+# Python cache / compiled files
+# ==================================================
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
 
-# OS files
+# ==================================================
+# Jupyter Notebook
+# ==================================================
+.ipynb_checkpoints/
+
+# ==================================================
+# VS Code / IDE
+# ==================================================
+.vscode/
+.idea/
+
+# ==================================================
+# Logs & temporary files
+# ==================================================
+*.log
+*.tmp
+
+# ==================================================
+# OS generated files
+# ==================================================
 .DS_Store
 Thumbs.db
+
+# ==================================================
+# Environment variables / secrets
+# ==================================================
+.env
+.env.*
